Business lite Changelog

****************************

Version 2.0 (8-9-11)
-Updated 404 page, added custom image.
-Adjusted styling on archive pages.
-Updated functions.php, added new scripts and cleaned up some existing functions.

Version 1.0.5 (7-17-11)
-Fixed bug causing long site title text to wrap prematurely.

Version 1.0.4 (7-13-11)
-Added Google + social icon.

Version 1.0.3 (7-6-11)
-Adjusted theme option CSS to eliminate WordPress 3.2 footer styling conflict.
-Security fix in comments.php removing $_SERVER variable statement.
-Cleaned up options.php, removed unnecessary functions.
-Now enqueueing WordPress jQuery library instead of Google's for offline functionality. 

Version 1.0.2 (6-16-2011)
-Fixed whitespace issue at bottom of options.php causing "cannot modify header information" error. 

Version 1.0.1 (6-13-2011)
-Moved hardcoded Superfish script out of header, now enqueued in functions.php.
-jQuery noconflict patch to fix third-party plugin compatibility issues.

Version 1.0 (6-10-2011)
-Initial release.